# assistant

./: .gitignore  README.md  build.bat  build.sh  build.spec  main.py  pyproject.toml  requirements.txt
docs/: BUILD.md  CHANGELOG.md
internal/: __init__.py
internal/audio/: __init__.py  display.py  encoder.py  processor.py  scanner.py  tagger.py  ui.py  writer.py
internal/chat/: __init__.py  handler.py  model_manager.py  service.py  ui.py  window.py
internal/file/: __init__.py  handler.py  service.py  ui.py
internal/model/: chat.py  config.py
internal/ui/: __init__.py  components.py  toolbar.py  window.py
pkg/: __init__.py
pkg/api/: __init__.py  ollama.py
pkg/utils/: path.py  system.py
screenshots/: .gitkeep
