[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assistant"
version = "0.1.0"
description = "Multi-functional assistant application with file management and chat"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Assistant Team"}
]

[project.scripts]
assistant = "main:main"

[tool.setuptools]
packages = ["internal", "pkg"]

[tool.setuptools.package-data]
"*" = ["assets/**/*"]

